Add missing configuration information to CONFIGURATION.md
There was some missing configuration options in the CONFIGURATION documentation.
This patch adds these missing configurations.

JerryScript-DCO-1.0-Signed-off-by: Gergo Csizi gergocs@inf.u-szeged.hu

--- a/docs/01.CONFIGURATION.md
+++ b/docs/01.CONFIGURATION.md
@@ -291,6 +291,58 @@ This option is disabled by default.
 | CMake:  | `-DJERRY_MEM_GC_BEFORE_EACH_ALLOC=ON/OFF`    |
 | Python: | `--mem-stress-test=ON/OFF`                   |
 
+### MSVC CRT
+
+This option enables the use of the MSVC CRT library and is disabled by default.
+
+| Options |                                              |
+|---------|----------------------------------------------|
+| C:      | `<none>`                                     |
+| CMake:  | `-DENABLE_STATIC_CRT=ON/OFF`                 |
+| Python: | `--static-crt=ON/OFF`                        |
+
+### Architecture
+
+Specify the platform name if it is supported by the generator.
+
+| Options |                                              |
+|---------|----------------------------------------------|
+| C:      | `<none>`                                     |
+| CMake:  | `-A (string)`                                |
+| Python: | `--arch=(string)`                            |
+
+### Tostring function
+
+Enable function toString.
+
+| Options |                                              |
+|---------|----------------------------------------------|
+| C:      | `-DJERRY_FUNCTION_TO_STRING=0/1`             |
+| CMake:  | `-DJERRY_FUNCTION_TO_STRING=ON/OFF`          |
+| Python: | `--function-to-string=ON/OFF`                |
+
+
+### VM throw
+
+Enable VM throw.
+
+| Options |                                              |
+|---------|----------------------------------------------|
+| C:      | `-DJERRY_VM_THROW=0/1`                       |
+| CMake:  | `-DJERRY_VM_THROW=ON/OFF`                    |
+| Python: | `--vm-throw=ON/OFF`                          |
+
+
+### Promise callback
+
+Enable Promise callback.
+
+| Options |                                              |
+|---------|----------------------------------------------|
+| C:      | `-DJERRY_PROMISE_CALLBACK=0/1`               |
+| CMake:  | `-DJERRY_PROMISE_CALLBACK=ON/OFF`            |
+| Python: | `--promise-callback=ON/OFF`                  |
+
 
 # Amalgamated sources
 
