--- a/docs/14.EXT-REFERENCE-HANDLE-SCOPE.md
+++ b/docs/14.EXT-REFERENCE-HANDLE-SCOPE.md
@@ -11,7 +11,7 @@ JerryScript only supports a single nested hierarchy of scopes. There is only one
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
@@ -55,7 +55,7 @@ It is necessary in common cases that a handle has to be promote to outer scope a
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
