--- a/docs/01.CONFIGURATION.md
+++ b/docs/01.CONFIGURATION.md
@@ -155,7 +155,7 @@ Enabling this feature provides detailed error messages where available, like lin
 
 ### Logging
 
-This option can be used to enable log messages during runtime. When enabled the engine will use the `jerry_port_log` port API function to print relevant log messages.
+This option can be used to enable log messages during runtime. When enabled the engine will use the `jerry_port_log_buffer` port API function to print relevant log messages.
 This feature is disabled by default.
 
 | Options |                                              |
