Reduce the usage of strlen
* Improve jerry_string_sz only accept UTF-8 string(that's a rare case accept CESU-8 in c/cpp code)
* The document about jerry_string_sz only support ASCII(the fact is CESU-8 before this MR), update it to support UTF-8 after this MR
* Improve all _sz function to take jerry_value_t that can construct from `jerry_string_sz`
* Improve JERRY_ZSTR_ARG can only accept string literal(that's UTF-8)
* Add function jerry_value_list_free to free a list of jerry_value_t
* All call to jerry_string/jerry_string_cesu8 in core indeed are removed, so when there is no linkage to it, code size is saved

The prototype of new/improved function/macros is:
```c
jerry_value_t jerry_string_cesu8 (const jerry_char_t *buffer_p, jerry_size_t buffer_size);
jerry_value_t jerry_string_utf8 (const jerry_char_t *buffer_p, jerry_size_t buffer_size);
#define jerry_string_sz(str) jerry_string_utf8 (JERRY_ZSTR_ARG (str))

jerry_value_t jerry_error_sz (jerry_error_t error_type, const jerry_value_t message_sz);
jerry_value_t jerry_throw_sz (jerry_error_t error_type, const jerry_value_t message_sz);
jerry_value_t jerry_regexp_sz (const jerry_value_t pattern_sz, uint16_t flags);
jerry_value_t jerry_object_delete_sz (const jerry_value_t object, const jerry_value_t key_sz);
jerry_value_t jerry_object_get_sz (const jerry_value_t object, const jerry_value_t key_sz);
jerry_value_t jerry_object_has_sz (const jerry_value_t object, const jerry_value_t key_sz);
jerry_value_t jerry_object_set_sz (jerry_value_t object, const jerry_value_t key_sz, const jerry_value_t value);
```

JerryScript-DCO-1.0-Signed-off-by: Yonggang Luo luoyonggang@gmail.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -3836,7 +3836,7 @@ jerry_error_type (const jerry_value_t value);
 
 ```c
 {
-  jerry_value_t error_obj = jerry_error_sz (JERRY_ERROR_RANGE, "error msg");
+  jerry_value_t error_obj = jerry_error_sz (JERRY_ERROR_RANGE, jerry_string_sz ("error msg"));
   jerry_error_t error_type = jerry_error_type (error_obj);
 
   // error_type is now JERRY_ERROR_RANGE.
@@ -3958,7 +3958,7 @@ void main(void)
 
   jerry_error_on_created (error_object_created_callback, NULL);
 
-  jerry_value_free (jerry_error_sz (JERRY_ERROR_COMMON, "Message"));
+  jerry_value_free (jerry_error_sz (JERRY_ERROR_COMMON, jerry_string_sz ("Message")));
 
   jerry_cleanup ();
 } /* main */
@@ -4153,7 +4153,7 @@ throw_exception (const jerry_call_info_t *call_info_p, /**< call info */
   (void) argv;
   (void) argc;
 
-  jerry_value_t result_value = jerry_throw_sz (JERRY_ERROR_COMMON, "Error!");
+  jerry_value_t result_value = jerry_throw_sz (JERRY_ERROR_COMMON, jerry_string_sz ("Error!"));
 
   /* Ignore calling the vm_throw_callback function. */
   jerry_exception_allow_capture (result_value, false);
@@ -4541,7 +4541,7 @@ main (void)
 
   jerry_string_external_on_free (external_string_free_callback);
 
-  const char *string_p = "This is a long external string, should not be duplicated!";
+#define string_p "This is a long external string, should not be duplicated!"
   jerry_value_t external_string = jerry_string_external_sz (string_p, NULL);
   /* The external_string_free_callback is called. */
   jerry_value_free (external_string);
@@ -4602,7 +4602,7 @@ main (void)
 {
   jerry_init (JERRY_INIT_EMPTY);
 
-  const char *string_p = "This is a long external string, should not be duplicated!";
+#define string_p "This is a long external string, should not be duplicated!"
 
   jerry_value_t external_string = jerry_string_external_sz (string_p, (void *) &user_value);
 
@@ -7158,12 +7158,12 @@ jerry_boolean (bool value);
 
 **Summary**
 
-Create new JavaScript Error object with the specified error message.
-
-Important! The `error_type` argument *must not be* `JERRY_ERROR_NONE`.
-Creating an Error object with no error type is not valid.
+Create an Error object with the provided `message` string value as the error `message` property.
+If the `message` value is not a string, the created error will not have a `message` property.
 
 *Note*:
+- Important! The `error_type` argument *must not be* `JERRY_ERROR_NONE`.
+  Creating an Error object with no error type is not valid.
 - Returned value must be freed with [jerry_value_free](#jerry_value_free) when it
   is no longer needed.
 
@@ -7206,21 +7206,25 @@ jerry_error (jerry_error_t error_type, jerry_value_t message);
 
 **Summary**
 
-Create new JavaScript Error object, using the a zero-terminated string as the error message.
+Create an Error object with the provided `message_sz` string value as the error `message` property.
+If the `message_sz` value is not a string, the created error will not have a `message` property.
 
 *Note*:
+- Important! The `error_type` argument *must not be* `JERRY_ERROR_NONE`.
+  Creating an Error object with no error type is not valid.
 - Returned value must be freed with [jerry_value_free](#jerry_value_free) when it
   is no longer needed.
+- The `message_sz` value will be freed in this function.
 
 **Prototype**
 
 ```c
 jerry_value_t
-jerry_error_sz (jerry_error_t error_type, const char *message_p);
+jerry_error_sz (jerry_error_t error_type, const jerry_value_t message_sz);
 ```
 
 - `error_type` - type of the error
-- `message_p` - value of 'message' property of the constructed error object
+- `message_sz` - message of the error that will be free/take
 - return value - constructed error object
 
 *Renamed in version 3.0, it was previously known as `jerry_create_error` in earlier versions.*
@@ -7229,7 +7233,7 @@ jerry_error_sz (jerry_error_t error_type, const char *message_p);
 
 ```c
 {
-  jerry_value_t error_obj = jerry_error_sz (JERRY_ERROR_TYPE, "error");
+  jerry_value_t error_obj = jerry_error_sz (JERRY_ERROR_TYPE, jerry_string_sz ("error"));
 
   ... // usage of error_obj
 
@@ -7757,20 +7761,22 @@ main (void)
 
 **Summary**
 
-Create string from a zero-terminated ASCII string.
+Create string value from the zero-terminated UTF-8 encoded literal string.
+The content of the buffer is assumed be encoded correctly, it's the callers
+responsibility to validate the input.
 
 *Note*:
+- This is a macro that only accept literal string
 - Returned value must be freed with [jerry_value_free](#jerry_value_free) when it
   is no longer needed.
 
 **Prototype**
 
 ```c
-jerry_value_t
-jerry_string_sz (const char *str_p);
+#define jerry_string_sz(str)
 ```
 
-- `str_p` - non-null pointer to zero-terminated string
+- `str` - A zero-terminated UTF-8 encoded literal string
 - return value - created string
 
 *Renamed in version 3.0, it was previously known as `jerry_create_string` in earlier versions.*
@@ -7779,7 +7785,7 @@ jerry_string_sz (const char *str_p);
 
 ```c
 {
-  const char char_array[] = "a string";
+#define char_array "a string"
   jerry_value_t string_value = jerry_string_sz (char_array);
 
   ... // usage of string_value
@@ -7790,7 +7796,7 @@ jerry_string_sz (const char *str_p);
 
 **See also**
 
-- [jerry_string](#jerry_string)
+- [jerry_string_utf8](#jerry_string_utf8)
 
 
 ## jerry_string
@@ -7839,17 +7845,107 @@ jerry_string (const jerry_char_t *buffer_p,
 
 - [jerry_validate_string](#jerry_validate_string)
 - [jerry_string_sz](#jerry_string_sz)
+- [jerry_string_utf8](#jerry_string_utf8)
+- [jerry_string_cesu8](#jerry_string_cesu8)
+
+
+## jerry_string_utf8
+
+**Summary**
+
+Create a string value from the input buffer using the UTF-8 encoding.
+The content of the buffer is assumed to be valid in the UTF-8 encoding,
+it's the callers responsibility to validate the input.
+
+*Note*:
+- Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+
+**Prototype**
+
+```c
+jerry_value_t
+jerry_string_utf8 (const jerry_char_t *buffer_p,
+                   jerry_size_t buf_size)
+```
+
+- `buffer_p` - non-null pointer to buffer
+- `buf_size` - size of the buffer
+
+**Example**
+
+```c
+{
+  const jerry_char_t char_array[] = "a string";
+  jerry_value_t string_value = jerry_string_utf8 (char_array,
+                                                  sizeof (char_array) - 1);
+
+  ... // usage of string_value
+
+  jerry_value_free (string_value);
+}
+
+```
+
+**See also**
+
+- [jerry_validate_string](#jerry_validate_string)
+- [jerry_string_sz](#jerry_string_sz)
+- [jerry_string](#jerry_string)
+
+
+## jerry_string_cesu8
+
+**Summary**
+
+Create a string value from the input buffer using the CESU-8 encoding.
+The content of the buffer is assumed to be valid in the CESU-8 encoding,
+it's the callers responsibility to validate the input.
+
+*Note*:
+- Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+
+**Prototype**
+
+```c
+jerry_value_t
+jerry_string_cesu8 (const jerry_char_t *buffer_p,
+                   jerry_size_t buf_size)
+```
+
+- `buffer_p` - non-null pointer to buffer
+- `buf_size` - size of the buffer
+
+**Example**
+
+```c
+{
+  const jerry_char_t char_array[] = "\xed\xa0\x83\xed\xb2\x80";
+  jerry_value_t string_value = jerry_string_cesu8 (char_array,
+                                                   sizeof (char_array) - 1);
+
+  ... // usage of string_value
+
+  jerry_value_free (string_value);
+}
+
+```
+
+**See also**
+
+- [jerry_validate_string](#jerry_validate_string)
+- [jerry_string](#jerry_string)
 
 
 ## jerry_string_external_sz
 
 **Summary**
 
-Create an external string from a zero-terminated ASCII string. The string buffer passed to the function
-should not be modified until the free callback is called. This function can be used to avoid
-the duplication of large strings.
+Create external string from the zero-terminated CESU encoded literal string.
+The content of the buffer is assumed be encoded correctly, it's the callers
+responsibility to validate the input.
 
 *Note*:
+- This is a macro that only accept literal string
 - The free callback can be set by [jerry_string_external_on_free](#jerry_string_external_on_free)
 - Returned value must be freed with [jerry_value_free](#jerry_value_free)
   when it is no longer needed.
@@ -7857,13 +7953,12 @@ the duplication of large strings.
 **Prototype**
 
 ```c
-jerry_value_t
-jerry_string_external_sz (const char *str_p, void *user_p);
+#define jerry_string_external_sz(str, user_p)
 ```
 
-- `str_p` - non-null pointer to a zero-terminated string
+- `str_p` - A zero-terminated CESU-8 encoded literal string
 - `user_p` - user pointer passed to the callback when the string is freed
-- return value - value of the created string
+- return value - created external string
 
 *Introduced in version 2.4*.
 
@@ -8096,10 +8191,10 @@ jerry_regexp_sz (const jerry_char_t *pattern_p, uint16_t flags);
 
 ```c
 {
-  jerry_char_t pattern_p = "[cgt]gggtaaa|tttaccc[acg]";
+#define pattern "[cgt]gggtaaa|tttaccc[acg]"
   uint16_t pattern_flags = JERRY_REGEXP_FLAG_IGNORE_CASE;
 
-  jerry_value_t regexp = jerry_regexp_sz (pattern_p, pattern_flags);
+  jerry_value_t regexp = jerry_regexp_sz (jerry_string_sz (pattern), pattern_flags);
 
   ...
 
@@ -8141,7 +8236,7 @@ jerry_regexp (const jerry_value_t pattern, uint16_t flags);
 {
   jerry_char_t pattern_p = "[cgt]gggtaaa|tttaccc[acg]";
   jerry_size_t pattern_size = sizeof (pattern_p) - 1;
-  jerry_value_t pattern_str = jerry_string (pattern_p, pattern_size, JERRY_ENCODING_UTF8);
+  jerry_value_t pattern_str = jerry_string_utf8 (pattern_p, pattern_size);
 
   uint16_t pattern_flags = JERRY_REGEXP_FLAG_IGNORE_CASE;
 
@@ -8569,16 +8664,18 @@ main (void)
 
 Checks whether the object or its prototype objects have the given property.
 
-*Note*: Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+*Note*:
+- Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+- `key_sz` will be freed in this function
 
 **Prototype**
 
 ```c
-jerry_value_t jerry_object_has_sz (const jerry_value_t object, const char *key_p);
+jerry_value_t jerry_object_has_sz (const jerry_value_t object, const jerry_value_t key_sz);
 ```
 
 - `object` - object value
-- `key_p` - property name (zero-terminated string)
+- `key_sz` - property key that will be free/take
 - return value - JavaScript value that evaluates to
   -  exception - if the operation fail
   -  true/false API value - depend on whether the property exists
@@ -8599,7 +8696,7 @@ main (void)
 
   jerry_value_t global_object = jerry_current_realm ();
 
-  jerry_value_t has_prop_js = jerry_object_has_sz (global_object, "handler_field");
+  jerry_value_t has_prop_js = jerry_object_has_sz (global_object, jerry_string_sz ("handler_field"));
   bool has_prop = jerry_value_is_true (has_prop_js);
 
   jerry_value_free (has_prop_js);
@@ -8747,6 +8844,9 @@ main (void)
 
 Delete a property from an object.
 
+*Note*:
+- Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+
 **Prototype**
 
 ```c
@@ -8793,14 +8893,18 @@ jerry_object_delete (const jerry_value_t obj_val,
 
 Delete a property from an object.
 
+*Note*:
+- Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+- `key_sz` will be freed in this function
+
 **Prototype**
 
 ```c
-jerry_value_t jerry_object_delete_sz (const jerry_value_t object, const char *key_p);
+jerry_value_t jerry_object_delete_sz (const jerry_value_t object, const jerry_value_t key_sz);
 ```
 
 - `obj_val` - object value
-- `key_p` - property name (zero-terminated string)
+- `key_sz` - < property name that will be free/take
 - return value
   - true, if property was deleted successfully
   - exception, otherwise
@@ -8813,7 +8917,7 @@ jerry_value_t jerry_object_delete_sz (const jerry_value_t object, const char *ke
 {
   jerry_value_t global_object = jerry_current_realm ();
 
-  jerry_value_t delete_result = jerry_object_delete_sz (global_object, "my_prop");
+  jerry_value_t delete_result = jerry_object_delete_sz (global_object, jerry_string_sz ("my_prop"));
   /* use "delete_result" */
 
   jerry_value_free (delete_result);
@@ -8995,17 +9099,18 @@ main (void)
 
 Get value of a property to the specified object with the given name.
 
-*Note*: Returned value must be freed with [jerry_value_free](#jerry_value_free) when it
-is no longer needed.
+*Note*:
+- Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+- `key_sz` will be freed in this function
 
 **Prototype**
 
 ```c
-jerry_value_t jerry_object_get_sz (const jerry_value_t object, const char *key_p);
+jerry_value_t jerry_object_get_sz (const jerry_value_t object, const jerry_value_t key_sz);
 ```
 
 - `obj_val` - object value
-- `key_p` - property name (zero-terminated string)
+- `key_sz` - property key that will be free/take
 - return value
   - value of property, if success
   - thrown exception, otherwise
@@ -9026,7 +9131,7 @@ main (void)
 
   jerry_value_t global_object = jerry_current_realm ();
 
-  jerry_value_t prop_value = jerry_object_get_sz (global_object, "Object");
+  jerry_value_t prop_value = jerry_object_get_sz (global_object, jerry_string_sz ("Object"));
 
   /* use "prop_value" then release it. */
 
@@ -9303,17 +9408,18 @@ jerry_object_set (const jerry_value_t obj_val,
 
 Set a property to the specified object with the given name.
 
-*Note*: Returned value must be freed with [jerry_value_free](#jerry_value_free) when it
-is no longer needed.
+*Note*:
+- Returned value must be freed with [jerry_value_free](#jerry_value_free) when it is no longer needed.
+- `key_sz` will be freed in this function
 
 **Prototype**
 
 ```c
-jerry_value_t jerry_object_set_sz (jerry_value_t object, const char *key_p, const jerry_value_t value);
+jerry_value_t jerry_object_set_sz (jerry_value_t object, const jerry_value_t key_sz, const jerry_value_t value);
 ```
 
 - `obj_val` - object value
-- `key_p` - property name (zero-terminated string)
+- `key_sz` - property key that will be free/take
 - `value_to_set` - value to set
 - return value
   - true, if success
@@ -9331,7 +9437,7 @@ jerry_value_t jerry_object_set_sz (jerry_value_t object, const char *key_p, cons
 
   jerry_value_t glob_obj = jerry_current_realm ();
 
-  jerry_value_t set_result = jerry_object_set_sz (glob_obj, "my_prop", value_to_set);
+  jerry_value_t set_result = jerry_object_set_sz (glob_obj, jerry_string_sz ("my_prop"), value_to_set);
 
   ... // check result of property set call
 
