--- a/docs/03.API-EXAMPLE.md
+++ b/docs/03.API-EXAMPLE.md
@@ -393,9 +393,17 @@ In this example the following extension methods are used:
 
 In further examples this "print" handler will be used.
 
+The `api-example-6.c` file should contain the following code:
+
+[doctest]: # ()
+
 ```c
+#include <stdio.h>
+
 #include "jerryscript.h"
+
 #include "jerryscript-ext/handlers.h"
+#include "jerryscript-ext/properties.h"
 
 int
 main (void)
@@ -407,7 +415,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   /* Register 'print' function from the extensions to the global object */
-  jerryx_register_global ("print", jerryx_handler_print);
+  jerryx_register_global (jerry_string_sz ("print"), jerryx_handler_print);
 
   /* Setup Global scope code */
   jerry_value_t parsed_code = jerry_parse (script, script_size, NULL);
@@ -470,7 +478,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   /* Register 'print' function from the extensions */
-  jerryx_register_global ("print", jerryx_handler_print);
+  jerryx_register_global (jerry_string_sz ("print"), jerryx_handler_print);
 
   /* Getting pointer to the Global object */
   jerry_value_t global_object = jerry_current_realm ();
@@ -729,7 +737,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   /* Register 'print' function from the extensions */
-  jerryx_register_global ("print", jerryx_handler_print);
+  jerryx_register_global (jerry_string_sz ("print"), jerryx_handler_print);
 
   while (!is_done)
   {
@@ -808,10 +816,8 @@ In this example (`api-example-9.c`) an object with a native function is added to
 #include "jerryscript-ext/handlers.h"
 #include "jerryscript-ext/properties.h"
 
-struct my_struct
-{
-  const char *msg;
-} my_struct;
+
+jerry_string_t my_struct;
 
 /**
  * Get a string from a native object
@@ -821,7 +827,7 @@ get_msg_handler (const jerry_call_info_t *call_info_p, /**< call information */
                  const jerry_value_t *args_p, /**< function arguments */
                  const jerry_length_t args_cnt) /**< number of function arguments */
 {
-  return jerry_string_sz (my_struct.msg);
+  return jerry_string_utf8 (my_struct.ptr, my_struct.size);
 } /* get_msg_handler */
 
 int
@@ -831,10 +837,13 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   /* Register 'print' function from the extensions */
-  jerryx_register_global ("print", jerryx_handler_print);
+  jerryx_register_global (jerry_string_sz ("print"), jerryx_handler_print);
 
   /* Do something with the native object */
-  my_struct.msg = "Hello, World!";
+  {
+    static const jerry_string_t hello = { JERRY_ZSTR_ARG ("Hello, World!") };
+    my_struct = hello;
+  }
 
   /* Create an empty JS object */
   jerry_value_t object = jerry_object ();
@@ -958,7 +967,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   /* Register 'print' function from the extensions */
-  jerryx_register_global ("print", jerryx_handler_print);
+  jerryx_register_global (jerry_string_sz ("print"), jerryx_handler_print);
 
   /* Create a JS object */
   const jerry_char_t my_js_object[] = " \
@@ -1058,7 +1067,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   /* Register the print function */
-  jerryx_register_global ("print", jerryx_handler_print);
+  jerryx_register_global (jerry_string_sz ("print"), jerryx_handler_print);
 
   /* Evaluate the script */
   jerry_value_t eval_ret = jerry_eval (script, sizeof (script) - 1, JERRY_PARSE_NO_OPTS);
