--- a/docs/09.EXT-REFERENCE-ARG.md
+++ b/docs/09.EXT-REFERENCE-ARG.md
@@ -612,6 +612,7 @@ jerryx_arg_object_properties (const jerryx_arg_object_props_t *obj_prop_p,
 
 ```c
 #include "jerryscript.h"
+
 #include "jerryscript-ext/arg.h"
 
 /**
@@ -628,39 +629,31 @@ my_external_handler (const jerry_value_t function_obj,
 {
   bool required_bool;
   double required_num;
-  double optional_num = 1234.567;  // default value
+  double optional_num = 1234.567; // default value
 
   /* "prop_name_p" defines the name list of the expected properties' names. */
-  const char *prop_name_p[] = { "enable", "data", "extra_data" };
+  const jerry_value_t prop_name_p[] = { jerry_string_sz ("enable"),
+                                        jerry_string_sz ("data"),
+                                        jerry_string_sz ("extra_data") };
 
   /* "prop_mapping" defines the steps to transform properties to C variables. */
-  const jerryx_arg_t prop_mapping[] =
-  {
-    jerryx_arg_boolean (&required_bool, JERRYX_ARG_COERCE, JERRYX_ARG_REQUIRED),
-    jerryx_arg_number (&required_num, JERRYX_ARG_COERCE, JERRYX_ARG_REQUIRED),
-    jerryx_arg_number (&optional_num, JERRYX_ARG_COERCE, JERRYX_ARG_OPTIONAL)
-  };
+  const jerryx_arg_t prop_mapping[] = { jerryx_arg_boolean (&required_bool, JERRYX_ARG_COERCE, JERRYX_ARG_REQUIRED),
+                                        jerryx_arg_number (&required_num, JERRYX_ARG_COERCE, JERRYX_ARG_REQUIRED),
+                                        jerryx_arg_number (&optional_num, JERRYX_ARG_COERCE, JERRYX_ARG_OPTIONAL) };
 
   /* Prepare the jerryx_arg_object_props_t instance. */
-  const jerryx_arg_object_props_t prop_info =
-  {
-    .name_p = (const jerry_char_t **) prop_name_p,
-    .name_cnt = 3,
-    .c_arg_p = prop_mapping,
-    .c_arg_cnt = 3
-  };
+  const jerryx_arg_object_props_t prop_info = { .name_p = prop_name_p,
+                                                .name_cnt = 3,
+                                                .c_arg_p = prop_mapping,
+                                                .c_arg_cnt = 3 };
 
   /* It is the mapping used in the jerryx_arg_transform_args. */
-  const jerryx_arg_t mapping[] =
-  {
-    jerryx_arg_object_properties (&prop_info, JERRYX_ARG_REQUIRED)
-  };
+  const jerryx_arg_t mapping[] = { jerryx_arg_object_properties (&prop_info, JERRYX_ARG_REQUIRED) };
+
+  jerry_value_list_free (prop_name_p, sizeof (prop_name_p) / sizeof (prop_name_p[0]));
 
   /* Validate and transform. */
-  const jerry_value_t rv = jerryx_arg_transform_args (args_p,
-                                                      args_count,
-                                                      mapping,
-                                                      1);
+  const jerry_value_t rv = jerryx_arg_transform_args (args_p, args_count, mapping, 1);
 
   if (jerry_value_is_exception (rv))
   {
@@ -673,9 +666,8 @@ my_external_handler (const jerry_value_t function_obj,
    * required_bool, required_num and optional_num can now be used.
    */
 
-   return jerry_undefined (); /* Or return something more meaningful. */
+  return jerry_undefined (); /* Or return something more meaningful. */
 }
-
 ```
 
  **See also**
