--- a/docs/10.EXT-REFERENCE-HANDLER.md
+++ b/docs/10.EXT-REFERENCE-HANDLER.md
@@ -120,8 +120,8 @@ main (int argc, char **argv)
 
   jerryx_property_entry methods[] =
   {
-    { "demo", jerry_function_external (handler) },
-    { NULL, 0 },
+    JERRYX_PROPERTY_FUNCTION("demo", handler),
+    JERRYX_PROPERTY_LIST_END(),
   };
 
   jerry_value_t global = jerry_current_realm ();
@@ -362,7 +362,7 @@ longer needed.
 
 ```c
 jerry_value_t
-jerryx_register_global (const char *name_p,
+jerryx_register_global (jerry_value_t function_name_val,
                         jerry_external_handler_t handler_p);
 ```
 
@@ -381,14 +381,15 @@ jerryx_register_global (const char *name_p,
 #include "jerryscript-ext/properties.h"
 
 static const struct {
-  const char *name_p;
+  const jerry_char_t *name_p;
+  jerry_size_t name_size;
   jerry_external_handler_t handler_p;
 } common_functions[] =
 {
-  { "assert", jerryx_handler_assert },
-  { "gc", jerryx_handler_gc },
-  { "print", jerryx_handler_print },
-  { NULL, NULL }
+  { JERRY_ZSTR_ARG ("assert"), jerryx_handler_assert },
+  { JERRY_ZSTR_ARG ("gc"), jerryx_handler_gc },
+  { JERRY_ZSTR_ARG ("print"), jerryx_handler_print },
+  { NULL, 0, NULL }
 };
 
 static void
@@ -398,7 +399,7 @@ register_common_functions (void)
 
   for (int i = 0; common_functions[i].name_p != NULL && !jerry_value_is_exception (ret); i++)
   {
-    ret = jerryx_register_global (common_functions[i].name_p,
+    ret = jerryx_register_global (jerry_string_utf8 (common_functions[i].name_p, common_functions[i].name_size),
                                   common_functions[i].handler_p);
   }
 
