--- a/docs/12.EXT-REFERENCE-MODULE.md
+++ b/docs/12.EXT-REFERENCE-MODULE.md
@@ -205,7 +205,7 @@ canonicalize_file_path (const jerry_value_t name)
   /**
    * Since a file on the file system can be referred to by multiple relative paths, but only by one absolute path, the
    * absolute path becomes the canonical name for the module. Thus, to establish this canonical name, we must search
-   * name for "./" and "../", follow symlinks, etc., then create absolute_path via jerry_string () and return
+   * name for "./" and "../", follow symlinks, etc., then create absolute_path via jerry_string_utf8 () and return
    * it, because it is the canonical name for this module. Thus, we avoid loading the same JavaScript file twice.
    */
 
