--- a/docs/06.REFERENCE-COUNTING.md
+++ b/docs/06.REFERENCE-COUNTING.md
@@ -135,7 +135,7 @@ jerry_value_t my_external_handler (const jerry_value_t function_obj,
 
   /* If the value to be returned is needed for other purposes the
    * jerry_value_copy () can be used to create new references. */
-  return jerry_string (...);
+  return jerry_string_utf8 (...);
 }
 ```
 
