docs: Fixes test code (#5193)
JerryScript-DCO-1.0-Signed-off-by: Yonggang Luo luoyonggang@gmail.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -3994,7 +3994,7 @@ jerry_on_throw (jerry_throw_cb_t throw_cb,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
@@ -4063,7 +4063,7 @@ bool jerry_exception_is_captured (jerry_value_t value);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
@@ -4129,7 +4129,7 @@ void jerry_exception_allow_capture (jerry_value_t value, bool should_capture);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
@@ -5036,7 +5036,7 @@ jerry_value_t jerry_module_link (const jerry_value_t module_val,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # (test="link")
 
 ```c
 #include <jerryscript.h>
@@ -5115,7 +5115,7 @@ jerry_value_t jerry_module_evaluate (const jerry_value_t module_val);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5207,7 +5207,7 @@ jerry_module_state_t jerry_module_state (const jerry_value_t module_val);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5268,7 +5268,7 @@ void jerry_module_on_state_changed (jerry_module_state_changed_cb_t callback,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5346,7 +5346,7 @@ void jerry_module_on_import_meta (jerry_module_import_meta_cb_t callback,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5424,7 +5424,7 @@ size_t jerry_module_request_count (const jerry_value_t module_val);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5496,7 +5496,7 @@ jerry_value_t jerry_module_request (const jerry_value_t module_val, size_t reque
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5564,7 +5564,7 @@ jerry_value_t jerry_module_namespace (const jerry_value_t module_val);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5632,7 +5632,7 @@ jerry_module_on_import (jerry_module_import_cb_t callback_p,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5764,7 +5764,7 @@ jerry_native_module (jerry_native_module_evaluate_cb_t callback,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5827,7 +5827,7 @@ jerry_native_module_get (const jerry_value_t native_module_val,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -5888,7 +5888,7 @@ jerry_value_t jerry_native_module_set (const jerry_value_t native_module_val,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include <jerryscript.h>
@@ -12992,7 +12992,7 @@ jerry_arraybuffer_has_buffer (const jerry_value_t value);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
@@ -13058,7 +13058,7 @@ jerry_arraybuffer_heap_allocation_limit (const jerry_length_t allocation_limit);
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
@@ -13134,7 +13134,7 @@ jerry_arraybuffer_allocator (jerry_arraybuffer_allocate_cb_t allocate_callback,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # ()
 
 ```c
 #include "jerryscript.h"
