Updated the "Getting Started" and "Migration Guide" for the 3.0 release
JerryScript-DCO-1.0-Signed-off-by: Laszlo Lango laszlo.lango@h-lab.eu

--- a/docs/00.GETTING-STARTED.md
+++ b/docs/00.GETTING-STARTED.md
@@ -5,17 +5,17 @@ Currently, only Ubuntu 18.04+ is officially supported as primary development env
 There are several dependencies, that should be installed manually. The following list is the absolute minimum for building:
 
 - `gcc` or any C99-compliant compiler (native or cross, e.g., arm-none-eabi)
-- `cmake` >= `2.8.12.2`
+- `cmake` >= `3.10`
 
 Several scripts and tools help the building and development process, thus it is recommended to have the following installed as well:
 
 - `bash` >= `4.3.11`
-- `cppcheck` >= `1.61`
-- `clang-format-10` >= `10.0.0`
-- `python` >= `2.7.6`
+- `cppcheck` >= `2.7`
+- `clang-format-15`
+- `python` >= `3.10`
 
 ```bash
-sudo apt-get install gcc gcc-arm-none-eabi cmake cppcheck clang-format-10 python
+sudo apt-get install gcc gcc-arm-none-eabi cmake cppcheck clang-format-15 python
 ```
 
 To make our scripts run correctly, several shell utilities should be available on the system:
@@ -57,7 +57,7 @@ python tools/build.py --cmake-param=CMAKE_PARAM
 python tools/build.py --profile=es.next|minimal
 ```
 
-See also the related [README.md](https://github.com/jerryscript-project/jerryscript/blob/master/jerry-core/profiles/README.md).
+See also the related [README.md](../jerry-core/profiles/README.md).
 
 **Use (compiler-default, external) libc**
 
