--- a/docs/16.MIGRATION-GUIDE.md
+++ b/docs/16.MIGRATION-GUIDE.md
@@ -771,3 +771,11 @@ In this section the new API functions are listed.
 - [`jerry_port_fatal`](05.PORT-API.md#jerry_port_fatal)
 - [`jerry_port_sleep`](05.PORT-API.md#jerry_port_sleep)
 - [`jerry_port_print_byte`](05.PORT-API.md#jerry_port_print_byte)
+
+# Migrating from 2.x to 3.x
+
+The most significant change in JerryScript 3.0 was the API rework. Most of the API functions had been
+renamed in this version. There are notes for every such function in the [API Reference](02.API-REFERENCE.md)
+to help you to migrate from an older version. For example:
+
+*Renamed in version 3.0, it was previously known as `jerry_get_global_object` in earlier versions.*
